// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Contact /> rendering with placeholder translation tags should render translation placeholder correctly 1`] = `
<div
  className="side-column contact"
>
  <div
    className="inner"
  >
    <div
      className="row"
    >
      <span
        className="label"
      >
        CONTACT_EMAIL_LABEL
        :
      </span>
      <a
        className="link"
        href="mailto:support@openwisp.co"
      >
        CONTACT_EMAIL
      </a>
    </div>
    <div
      className="row"
    >
      <span
        className="label"
      >
        CONTACT_HELPDESK_LABEL
        :
      </span>
      <a
        className="link"
        href="tel:+789 948 564"
      >
        CONTACT_HELPDESK
      </a>
    </div>
    <div
      className="contact-links"
    >
      <a
        className="contact-CONTACT_SOCIAL_LINK twitter-link link"
        href="https://twitter.com/openwisp"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="CONTACT_SOCIAL_LINK twitter"
          className="contact-CONTACT_SOCIAL_LINK twitter-image contact-image"
          src="/assets/default/twitter.svg"
        />
      </a>
      <a
        className="contact-CONTACT_SOCIAL_LINK facebook-link link"
        href="https://facebook.com/openwisp"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="CONTACT_SOCIAL_LINK facebook"
          className="contact-CONTACT_SOCIAL_LINK facebook-image contact-image"
          src="/assets/default/facebook.svg"
        />
      </a>
    </div>
  </div>
</div>
`;

exports[`<Status /> rendering should render correctly 1`] = `
<div
  className="side-column contact"
>
  <div
    className="inner"
  >
    <div
      className="row"
    >
      <span
        className="label"
      >
        E-mail
        :
      </span>
      <a
        className="link"
        href="mailto:support@openwisp.co"
      >
        support@openwisp.co
      </a>
    </div>
    <div
      className="row"
    >
      <span
        className="label"
      >
        Helpdesk
        :
      </span>
      <a
        className="link"
        href="tel:+789 948 564"
      >
        +789 948 564
      </a>
    </div>
    <div
      className="contact-links"
    >
      <a
        className="link "
        href="https://twitter.com/openwisp"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="twitter"
          className="contact-image "
          src="/assets/default/twitter.svg"
        />
      </a>
      <a
        className="link "
        href="https://facebook.com/openwisp"
        rel="noopener noreferrer"
        target="_blank"
      >
        <img
          alt="facebook"
          className="contact-image "
          src="/assets/default/facebook.svg"
        />
      </a>
    </div>
  </div>
</div>
`;
